syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "bikes/bike_identification.proto";
import "stations/station_identification.proto";
import "users/user_identification.proto";

message bike_reserved {
    google.protobuf.Timestamp time_stamp = 1;
    bike bike = 2;
    station_identification station = 3;
    user_identification user = 4;
}

message bike {
    bike_identification bike = 1;
    bool is_electric = 2;
}
